--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,7 @@ celerybeat.pid
 
 # Environments
 # .env
-../.env/
+.env/
 .venv/
 env/
 env1/
@@ -135,7 +135,7 @@ ENV/
 env.bak/
 venv.bak/
 pythonenv*
-../.idea/
+.idea/
 
 # Spyder project settings
 .spyderproject
