--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10
 
 ENV PYTHONUNBUFFERED 1
 
-
+RUN python -m pip install --upgrade pip
 COPY requirements/production.txt requirements.txt
 RUN pip install -r requirements.txt
 
